Update pyproject.toml to refine package inclusion and exclusion rules
- Added configuration to include packages starting with 'src' while excluding 'notebooks', 'datasets', and 'output' directories.
- Updated wheel configuration to exclude the same directories to streamline the build process.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,18 @@ dev = [
 [build-system]
 requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+include = ["src*"]
+exclude = [
+  "notebooks*",
+  "datasets*",
+  "output*"
+]
+
+[tool.wheel]
+exclude = [
+  "notebooks*",
+  "datasets*",
+  "output*"
+]
