--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "matplotlib",
     "scikit-learn",
     "seaborn",
-    "prefixspan-py"
+    "prefixspan"
 ]
 
 [project.optional-dependencies]
