--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ pandas==2.3.3
 numpy==2.3.4
 scikit-learn==1.7.2
 jupyter==1.1.1
-ipykernel==7.0.1
+ipykernel==6.29.0
+mlxtend==0.23.0
+nltk==3.8.1
+tqdm==4.66.1
