--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,10 @@ sentence-transformers==5.1.2
 
 # Google Generative AI client for Gemini integration
 google-genai==1.47.0
+# Google API Core library for exception handling (required by task3_app.py)
+# Note: google-genai doesn't include google-api-core as a dependency, but
+# task3_app.py uses google.api_core.exceptions for error handling
+google-api-core>=2.11.0
 
 # Environment variable management
 # Note: Upgraded from v5 plan's python-dotenv==1.0.1 to latest stable version
