feat: Add demo script for Medical Analysis AI System showcasing disease and breast cancer analysis
chore: Update dependencies in pyproject.toml and requirements.txt to include crewai and crewai-tools

feat: Implement core components of the Medical Analysis Crew System including agents, tools, and CLI

test: Add unit tests for the Medical Analysis Crew System covering analysis functionality and tool selection

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ dependencies = [
     "mlxtend",
     "nltk",
     "tqdm",
-    "ipykernel"
+    "ipykernel",
+    "crewai",
+    "crewai-tools"
 ]
 
 [project.optional-dependencies]
