--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+```pip-requirements
 prefixspan==0.5.2
 pandas==2.3.3
 numpy==2.3.4
@@ -8,3 +9,6 @@ mlxtend==0.23.0
 nltk==3.8.1
 tqdm==4.66.1
 seaborn==0.13.2
+crewai==0.41.1
+crewai-tools==0.4.26
+```
