feat: Integrate AI-powered symptom extraction and enhance disease analysis tools
- Added a new module for AI-powered symptom extraction (`symptom_extractor.py`) with a dedicated `SymptomExtractionTool`.
- Updated `crew_manager.py` to initialize the symptom extractor within the `MedicalAnalysisCrew`.
- Enhanced `DiseaseAnalysisTool` to utilize the new symptom extractor for improved symptom detection and analysis.
- Refactored symptom extraction logic to support AI-based extraction with fallback to rule-based methods.
- Improved diagnosis suggestion logic based on extracted symptoms.
- Updated `BreastCancerAnalysisTool` to incorporate AI-powered feature extraction and enhanced analysis insights.
- Added dynamic symptom and feature categories for more accurate analysis.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ env
 # Outputs - Ignore large generated data files
 outputs/association_rules.csv
 outputs/frequent_itemsets.csv
+
+*.egg-info
+dist/
