--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ dependencies = [
     "nltk",
     "tqdm",
     "ipykernel",
-    "crewai",
-    "crewai-tools"
+    "crewai>=1.3.0",
+    "crewai-tools>=1.3.0"
 ]
 
 [project.optional-dependencies]
