--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,9 @@ dependencies = [
     "tqdm",
     "ipykernel",
     "crewai>=1.3.0",
-    "crewai-tools>=1.3.0"
+    "crewai-tools>=1.3.0",
+    "fastapi==0.110.0",
+    "uvicorn>=0.29.0"
 ]
 
 [project.optional-dependencies]
